<resources>
    <string name="app_name">Labo3</string>
    <string name="btn_nfc">NFC activity</string>
    <string name="btn_barcode">Barcode activity</string>
    <string name="btn_connect">Connect</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="scanner">Place the camera in front of the barcode</string>
    <string name="barcodeResult">The barcode\'s value will appear here</string>
    <string name="barcodeFormat">The barcode\'s format will appear here</string>
    <string name="content">Content:</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="barcode_activity">Barcode Activity</string>
    <string name="format">Format:</string>
</resources>
