<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".barcode.BarcodeActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/barcode_activity"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/scanButton"
        android:layout_width="206dp"
        android:layout_height="62dp"
        android:layout_marginTop="50dp"
        android:text="@string/scan_barcode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barcodeFormat" />

    <TextView
        android:id="@+id/barcodeFormat"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:gravity="center"
        android:text="@string/barcodeFormat"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formatLabel" />

    <TextView
        android:id="@+id/contentLabel"
        android:layout_width="82dp"
        android:layout_height="30dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/content"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/formatLabel"
        android:layout_width="82dp"
        android:layout_height="30dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/format"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barcodeContent" />

    <EditText
        android:id="@+id/barcodeContent"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:editable="false"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contentLabel"
        tools:text="@string/barcodeResult" />

</androidx.constraintlayout.widget.ConstraintLayout>